--- a/Contact.html
+++ b/Contact.html
@@ -28,14 +28,14 @@
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-custom-color-2 u-header" id="header" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-align-left u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse u-custom-font u-font-montserrat" style="font-weight: 700;">
-            <a class="u-button-style u-custom-active-border-color u-custom-border u-custom-border-color u-custom-borders u-custom-color u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-text-shadow u-custom-text-shadow-blur u-custom-text-shadow-color u-custom-text-shadow-transparency u-custom-text-shadow-x u-custom-text-shadow-y u-hamburger-link u-nav-link" href="#">
+            <a class="u-button-style u-custom-active-border-color u-custom-border u-custom-border-color u-custom-borders u-custom-color u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-text-shadow u-custom-text-shadow-blur u-custom-text-shadow-color u-custom-text-shadow-transparency u-custom-text-shadow-x u-custom-text-shadow-y u-hamburger-link u-nav-link" href="index.html">
               <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 302 302" style=""><use xlink:href="#svg-0b31"></use></svg>
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="svg-0b31" x="0px" y="0px" viewBox="0 0 302 302" style="enable-background:new 0 0 302 302;" xml:space="preserve" class="u-svg-content"><g><rect y="36" width="302" height="30"></rect><rect y="236" width="302" height="30"></rect><rect y="136" width="302" height="30"></rect>
 </g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-font-montserrat u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-2 u-button-style u-nav-link u-palette-1-base u-text-active-white u-text-hover-palette-1-light-2 u-text-white" href="#" style="padding: 10px 20px; text-shadow: 2px 0px 8px rgba(128,128,128,1);">Home</a>
+            <ul class="u-custom-font u-font-montserrat u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-2 u-button-style u-nav-link u-palette-1-base u-text-active-white u-text-hover-palette-1-light-2 u-text-white" href="index.html" style="padding: 10px 20px; text-shadow: 2px 0px 8px rgba(128,128,128,1);">Home</a>
 </li><li class="u-nav-item"><a class="u-border-2 u-button-style u-nav-link u-palette-1-base u-text-active-white u-text-hover-palette-1-light-2 u-text-white" href="About.html" style="padding: 10px 20px; text-shadow: 2px 0px 8px rgba(128,128,128,1);">About</a>
 </li><li class="u-nav-item"><a class="u-border-2 u-button-style u-nav-link u-palette-1-base u-text-active-white u-text-hover-palette-1-light-2 u-text-white" href="Contact.html" style="padding: 10px 20px; text-shadow: 2px 0px 8px rgba(128,128,128,1);">Contact</a>
 </li><li class="u-nav-item"><a class="u-border-2 u-button-style u-nav-link u-palette-1-base u-text-active-white u-text-hover-palette-1-light-2 u-text-white" href="Page-1.html" style="padding: 10px 20px; text-shadow: 2px 0px 8px rgba(128,128,128,1);">Download</a>
@@ -45,7 +45,7 @@
             <div class="u-align-center u-black u-container-align-center u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Home</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html">Contact</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Page-1.html">Download</a>
@@ -55,7 +55,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <a href="#" class="u-image u-logo u-image-1" data-image-width="10307" data-image-height="2251">
+        <a href="index.html" class="u-image u-logo u-image-1" data-image-width="10307" data-image-height="2251">
           <img src="images/Asset11.png" class="u-logo-image u-logo-image-1">
         </a>
       </div></header>
