--- a/About.html
+++ b/About.html
@@ -44,7 +44,7 @@
       {
         "@context": "http://schema.org",
         "@type": "Organization",
-        "name": "",
+        "name": "Site1",
         "logo": "images/Asset11.png",
         "sameAs": []
       }
@@ -214,7 +214,7 @@
         <h2
           class="u-align-center u-custom-font u-font-montserrat u-subtitle u-text u-text-white u-text-1"
         >
-          ABOUT US
+          About
         </h2>
       </div>
     </section>
@@ -237,7 +237,7 @@
                   data-animation-event="scroll"
                   data-animation-duration="3000"
                 >
-                  1M
+                  35K
                 </h3>
                 <h4 class="u-align-center u-text u-text-2">Income Made</h4>
               </div>
@@ -254,7 +254,7 @@
                   data-animation-event="scroll"
                   data-animation-duration="3000"
                 >
-                  99%
+                  50%
                 </h3>
                 <h4 class="u-align-center u-text u-text-4">Active User</h4>
               </div>
@@ -271,7 +271,7 @@
                   data-animation-event="scroll"
                   data-animation-duration="3000"
                 >
-                  10+
+                  2
                 </h3>
                 <h4 class="u-align-center u-text u-text-6">
                   Years established
@@ -301,12 +301,12 @@
                 <h3 class="u-custom-font u-font-montserrat u-text u-text-2">
                   What we do<br />
                 </h3>
-                <p class="u-text u-text-default u-text-3">
+                <p class="u-text u-text-3">
                   We are a platform built for creative freelancers and clients
                   to connect, collaborate, and grow together.&nbsp;
                 </p>
                 <h3 class="u-text u-text-4">Who we are</h3>
-                <p class="u-text u-text-default u-text-5">
+                <p class="u-text u-text-5">
                   we specialize in equipping malaysian creatives industry ,
                   inspirations and oppurtunity turns idea into reality&nbsp;
                 </p>
@@ -323,11 +323,66 @@
         </div>
       </div>
     </section>
+    <section class="u-clearfix u-gradient u-image u-section-4" id="sec-ae8b">
+      <div
+        class="custom-expanded u-container-style u-group u-radius-50 u-shape-round u-group-1"
+        data-animation-name="customAnimationIn"
+        data-animation-duration="2000"
+      >
+        <div class="u-container-layout u-container-layout-1">
+          <h2
+            class="u-align-left u-custom-font u-font-montserrat u-text u-text-white u-text-1"
+          >
+            <b>Shaping the Future of Creativity</b>
+          </h2>
+          <p
+            class="u-align-left u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2"
+          >
+            our vision and mission&nbsp;
+          </p>
+        </div>
+      </div>
+      <div
+        class="custom-expanded u-container-style u-group u-radius u-shape-round u-white u-group-2"
+        data-animation-name="customAnimationIn"
+        data-animation-duration="2000"
+      >
+        <div class="u-container-layout u-container-layout-2">
+          <span
+            class="u-align-left u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-1"
+            ><img src="images/2661002-63df7512.png" alt=""
+          /></span>
+          <h5 class="u-align-left u-text u-text-default u-text-3">Vision</h5>
+          <p class="u-align-left u-text u-text-4">
+            To connect every creative freelancer in Malaysia with consistent job
+            opportunities while providing clients with a seamless platform to
+            find the right talent easily.
+          </p>
+        </div>
+      </div>
+      <div
+        class="custom-expanded u-container-style u-group u-radius-50 u-shape-round u-white u-group-3"
+        data-animation-name="customAnimationIn"
+        data-animation-duration="2000"
+      >
+        <div class="u-container-layout u-container-layout-3">
+          <span
+            class="u-align-left u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-2"
+            ><img src="images/3234841-fa75f5a4.png" alt=""
+          /></span>
+          <h5 class="u-align-left u-text u-text-default u-text-5">Mission</h5>
+          <p class="u-align-left u-text u-text-6">
+            To create Malaysia’s largest creative ecosystem where freelancers
+            grow, clients succeed, and creativity flourishes without limits.
+          </p>
+        </div>
+      </div>
+    </section>
     <section
-      class="u-align-center u-clearfix u-container-align-center u-section-4"
+      class="u-align-center u-clearfix u-container-align-center u-section-5"
       id="sec-37a7"
     >
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-bottom u-sheet-1">
         <h2
           class="u-align-center u-text u-text-default u-text-1"
           data-animation-name="customAnimationIn"
@@ -350,37 +405,16 @@
                 <img
                   alt=""
                   class="u-expanded-width u-image u-image-default u-image-1"
-                  data-image-width="626"
-                  data-image-height="417"
-                  src="images/ddddddd.jpg"
+                  data-image-width="1000"
+                  data-image-height="1000"
+                  src="images/hakim.png"
                 />
-                <h4 class="u-align-center u-text u-text-2">Mary Brown</h4>
+                <h4 class="u-align-center u-text u-text-2">Hakim Nahar</h4>
                 <h6
                   class="u-align-center u-text u-text-palette-1-light-1 u-text-3"
                 >
-                  creative leader
+                  Lead
                 </h6>
-                <p class="u-align-center u-text u-text-4">
-                  Glavi amet ritnisl libero molestie ante ut fringilla purus
-                  eros quis glavrid from dolor amet iquam lorem bibendum
-                </p>
-                <img
-                  alt=""
-                  class="u-expanded-width u-hidden-xs u-image u-image-default u-image-2"
-                  data-image-width="626"
-                  data-image-height="417"
-                  src="images/happy-man-with-long-thick-ginger-beard-has-friendly-smile_273609-16616.jpg"
-                />
-                <h4 class="u-align-center u-text u-text-5">Ann Richmond</h4>
-                <h6
-                  class="u-align-center u-text u-text-palette-1-light-1 u-text-6"
-                >
-                  creative leader
-                </h6>
-                <p class="u-align-center u-text u-text-7">
-                  Glavi amet ritnisl libero molestie ante ut fringilla purus
-                  eros quis glavrid from dolor amet iquam lorem bibendum
-                </p>
               </div>
             </div>
             <div
@@ -394,38 +428,17 @@
               >
                 <img
                   alt=""
-                  class="u-expanded-width u-image u-image-default u-image-3"
-                  data-image-width="626"
-                  data-image-height="417"
-                  src="images/woman9.jpg"
+                  class="u-expanded-width u-image u-image-default u-image-2"
+                  data-image-width="1000"
+                  data-image-height="1000"
+                  src="images/ammar.png"
                 />
-                <h4 class="u-align-center u-text u-text-8">Ann Richmond</h4>
+                <h4 class="u-align-center u-text u-text-4">Ammar Wazien</h4>
                 <h6
-                  class="u-align-center u-text u-text-palette-1-light-1 u-text-9"
+                  class="u-align-center u-text u-text-palette-1-light-1 u-text-5"
                 >
-                  creative leader
+                  Head of Designer
                 </h6>
-                <p class="u-align-center u-text u-text-10">
-                  Glavi amet ritnisl libero molestie ante ut fringilla purus
-                  eros quis glavrid from dolor amet iquam lorem bibendum
-                </p>
-                <img
-                  alt=""
-                  class="u-expanded-width u-hidden-xs u-image u-image-default u-image-4"
-                  data-image-width="626"
-                  data-image-height="417"
-                  src="images/man895.jpg"
-                />
-                <h4 class="u-align-center u-text u-text-11">Ann Richmond</h4>
-                <h6
-                  class="u-align-center u-text u-text-palette-1-light-1 u-text-12"
-                >
-                  creative leader
-                </h6>
-                <p class="u-align-center u-text u-text-13">
-                  Glavi amet ritnisl libero molestie ante ut fringilla purus
-                  eros quis glavrid from dolor amet iquam lorem bibendum
-                </p>
               </div>
             </div>
             <div
@@ -439,105 +452,123 @@
               >
                 <img
                   alt=""
-                  class="u-expanded-width u-image u-image-default u-image-5"
-                  data-image-width="626"
-                  data-image-height="417"
-                  src="images/woman8.jpg"
+                  class="u-expanded-width u-image u-image-default u-image-3"
+                  data-image-width="1000"
+                  data-image-height="1000"
+                  src="images/akma.png"
                 />
-                <h4 class="u-align-center u-text u-text-14">Chung Schlueter</h4>
+                <h4 class="u-align-center u-text u-text-6">Akmal</h4>
                 <h6
-                  class="u-align-center u-text u-text-palette-1-light-1 u-text-15"
+                  class="u-align-center u-text u-text-palette-1-light-1 u-text-7"
                 >
-                  strategy director
+                  Head of Developer
                 </h6>
-                <p class="u-align-center u-text u-text-16">
-                  Glavi amet ritnisl libero molestie ante ut fringilla purus
-                  eros quis glavrid from dolor amet iquam lorem bibendum
-                </p>
-                <img
-                  alt=""
-                  class="u-expanded-width u-hidden-xs u-image u-image-default u-image-6"
-                  data-image-width="626"
-                  data-image-height="417"
-                  src="images/5man.jpg"
-                />
-                <h4 class="u-align-center u-text u-text-17">Ann Richmond</h4>
-                <h6
-                  class="u-align-center u-text u-text-palette-1-light-1 u-text-18"
-                >
-                  creative leader
-                </h6>
-                <p class="u-align-center u-text u-text-19">
-                  Glavi amet ritnisl libero molestie ante ut fringilla purus
-                  eros quis glavrid from dolor amet iquam lorem bibendum
-                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="u-black u-clearfix u-section-5" id="sec-de9c">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+    <section
+      class="u-align-center u-clearfix u-container-align-center u-section-6"
+      id="sec-d69d"
+    >
+      <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
-            <div class="u-container-style u-list-item u-repeater-item">
+            <div
+              class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-1"
+              data-animation-name="customAnimationIn"
+              data-animation-duration="1500"
+              data-animation-delay="750"
+            >
               <div
-                class="u-container-layout u-similar-container u-valign-top-sm u-valign-top-xs u-container-layout-1"
+                class="u-container-layout u-similar-container u-container-layout-1"
               >
-                <h5 class="u-text u-text-default u-text-1">2021</h5>
-                <h3
-                  class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2"
+                <img
+                  alt=""
+                  class="u-expanded-width u-hidden-xs u-image u-image-default u-image-1"
+                  data-image-width="1000"
+                  data-image-height="1000"
+                  src="images/uzair.png"
+                />
+                <h4 class="u-align-center u-text u-text-1">Uzair Hanafi</h4>
+                <h6
+                  class="u-align-center u-text u-text-palette-1-light-1 u-text-2"
                 >
-                  Applications
-                </h3>
-                <h6 class="u-text u-text-default u-text-3">
-                  Celebrating Our Client’s New Online Presence
+                  Social Media Manger
                 </h6>
               </div>
             </div>
-            <div class="u-container-style u-list-item u-repeater-item">
+            <div
+              class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-2"
+              data-animation-name="customAnimationIn"
+              data-animation-duration="1500"
+              data-animation-delay="750"
+            >
               <div
-                class="u-container-layout u-similar-container u-valign-top-sm u-valign-top-xs u-container-layout-2"
+                class="u-container-layout u-similar-container u-container-layout-2"
               >
-                <h5 class="u-text u-text-default u-text-4">2022</h5>
-                <h3
-                  class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-5"
+                <img
+                  alt=""
+                  class="u-expanded-width u-hidden-xs u-image u-image-default u-image-2"
+                  data-image-width="1000"
+                  data-image-height="1000"
+                  src="images/ammarnaqib.png"
+                />
+                <h4 class="u-align-center u-text u-text-3">Ammar</h4>
+                <h6
+                  class="u-align-center u-text u-text-palette-1-light-1 u-text-4"
                 >
-                  Campaign Milestone
-                </h3>
-                <h6 class="u-text u-text-default u-text-6">
-                  Reaching 1 Million Impressions in a Month
+                  Marketer
                 </h6>
               </div>
             </div>
-            <div class="u-container-style u-list-item u-repeater-item">
+            <div
+              class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-3"
+              data-animation-name="customAnimationIn"
+              data-animation-duration="1500"
+              data-animation-delay="750"
+            >
               <div
-                class="u-container-layout u-similar-container u-valign-top-sm u-valign-top-xs u-container-layout-3"
+                class="u-container-layout u-similar-container u-container-layout-3"
               >
-                <h5 class="u-text u-text-default u-text-7">2023</h5>
-                <h3
-                  class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-8"
+                <img
+                  alt=""
+                  class="u-expanded-width u-hidden-xs u-image u-image-default u-image-3"
+                  data-image-width="1000"
+                  data-image-height="1000"
+                  src="images/kieo.png"
+                />
+                <h4 class="u-align-center u-text u-text-5">Hakim Shamsir</h4>
+                <h6
+                  class="u-align-center u-text u-text-palette-1-light-1 u-text-6"
                 >
-                  Award Recognition
-                </h3>
-                <h6 class="u-text u-text-default u-text-9">
-                  Honored as Best Digital Platform of the Year
+                  Frontman
                 </h6>
               </div>
             </div>
-            <div class="u-container-style u-list-item u-repeater-item">
+            <div
+              class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-4"
+              data-animation-name="customAnimationIn"
+              data-animation-duration="1500"
+              data-animation-delay="750"
+            >
               <div
-                class="u-container-layout u-similar-container u-valign-top-sm u-valign-top-xs u-container-layout-4"
+                class="u-container-layout u-similar-container u-container-layout-4"
               >
-                <h5 class="u-text u-text-default u-text-10">2024</h5>
-                <h3
-                  class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-11"
+                <img
+                  alt=""
+                  class="u-expanded-width u-hidden-xs u-image u-image-default u-image-4"
+                  data-image-width="1000"
+                  data-image-height="1000"
+                  src="images/haziq.png"
+                />
+                <h4 class="u-align-center u-text u-text-7">Haziq</h4>
+                <h6
+                  class="u-align-center u-text u-text-palette-1-light-1 u-text-8"
                 >
-                  Team Growth
-                </h3>
-                <h6 class="u-text u-text-default u-text-12">
-                  Welcoming 10 New Talented Professionals to Our Team
+                  Assistant Developer
                 </h6>
               </div>
             </div>
@@ -545,7 +576,7 @@
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-section-6" id="sec-9bf8">
+    <section class="u-clearfix u-section-7" id="sec-9bf8">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div
           class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1"
@@ -570,10 +601,10 @@
                   class="u-container-layout u-valign-top u-container-layout-2"
                 >
                   <p class="u-text u-text-default u-text-2">
-                    Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-                    consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-                    invidunt ut labore et dolore magna aliquyam erat, sed diam
-                    voluptua.
+                    Have questions about our platform or want to collaborate?
+                    Reach out to us! <br />
+                    <br />Follow us on social media for updates and
+                    opportunities!
                   </p>
                   <div class="u-expanded-width u-form u-form-1">
                     <form
@@ -759,11 +790,6 @@
             ></span>
           </a>
         </div>
-        <p
-          class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1"
-        >
-          No 4 Lorong Kota Raja 1c 41000 Klang Selan​gor
-        </p>
       </div>
     </footer>
     <section class="u-backlink u-clearfix u-grey-80">
