--- a/Contact.html
+++ b/Contact.html
@@ -41,7 +41,7 @@
       {
         "@context": "http://schema.org",
         "@type": "Organization",
-        "name": "",
+        "name": "Site1",
         "logo": "images/Asset11.png",
         "sameAs": []
       }
@@ -473,11 +473,6 @@
             ></span>
           </a>
         </div>
-        <p
-          class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1"
-        >
-          No 4 Lorong Kota Raja 1c 41000 Klang Selan​gor
-        </p>
       </div>
     </footer>
     <section class="u-backlink u-clearfix u-grey-80">
