--- a/Download.html
+++ b/Download.html
@@ -40,7 +40,7 @@
       {
         "@context": "http://schema.org",
         "@type": "Organization",
-        "name": "",
+        "name": "Site1",
         "logo": "images/Asset11.png",
         "sameAs": []
       }
@@ -209,8 +209,8 @@
       <h3 class="u-custom-font u-font-montserrat u-text u-text-1">
         <span style="font-weight: 200"
           ><b
-            >Something powerful is awakenin . A new era for creatives is about
-            to begin.</b
+            >Something powerful is coming. A new era for creatives is about to
+            begin.</b
           >
         </span>
         <span style="font-weight: 200">
@@ -486,11 +486,6 @@
             ></span>
           </a>
         </div>
-        <p
-          class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1"
-        >
-          No 4 Lorong Kota Raja 1c 41000 Klang Selan​gor
-        </p>
       </div>
     </footer>
     <section class="u-backlink u-clearfix u-grey-80">
