--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     <link
       id="u-page-google-font"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+      href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i"
     />
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
         "@type": "Organization",
-        "name": "",
+        "name": "Site1",
         "logo": "images/Asset11.png",
         "sameAs": []
       }
@@ -212,21 +212,13 @@
       data-image-width="1663"
       data-image-height="1631"
     >
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div
           class="custom-expanded u-container-style u-group u-shape-rectangle u-group-1"
         >
-          <div class="u-container-layout u-valign-top u-container-layout-1">
-            <h2
-              class="u-custom-font u-font-montserrat u-text u-text-default u-text-1"
-            >
-              Create
-            </h2>
-            <h3
-              class="u-custom-font u-font-montserrat u-text u-text-default u-text-2"
-            >
-              a better future together
-            </h3>
+          <div class="u-container-layout u-container-layout-1">
+            <h1 class="u-text u-text-1">Create</h1>
+            <h2 class="u-text u-text-2">a better future together</h2>
             <p
               class="u-align-justify u-custom-font u-font-montserrat u-text u-text-3"
             >
@@ -248,166 +240,125 @@
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-palette-1-base u-section-2" id="sec-22b1">
-      <div
-        class="data-layout-selected u-clearfix u-layout-wrap u-layout-wrap-1"
-      >
-        <div class="u-layout">
-          <div class="u-layout-row">
+    <section
+      class="u-clearfix u-gradient u-section-2"
+      id="sec-c1ea"
+      data-image-width="1663"
+      data-image-height="1631"
+    >
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div
+          class="custom-expanded u-container-style u-group u-palette-1-base u-radius u-shape-round u-group-1"
+        >
+          <div class="u-container-layout u-container-layout-1">
+            <img
+              class="u-expanded-height-xl u-image u-image-round u-radius u-image-1"
+              src="images/AppIconMockup.png"
+              alt=""
+              data-image-width="1368"
+              data-image-height="1058"
+            />
             <div
-              class="u-container-style u-layout-cell u-shape-rectangle u-size-60 u-layout-cell-1"
-              data-image-width="12601"
-              data-image-height="8185"
-              data-animation-name="customAnimationIn"
-              data-animation-duration="1500"
-              data-animation-delay="500"
+              class="data-layout-selected u-clearfix u-layout-wrap u-layout-wrap-1"
             >
-              <div class="u-container-layout u-valign-top u-container-layout-1">
-                <h1
-                  class="u-align-left u-custom-font u-font-montserrat u-text u-text-default u-text-1"
-                >
-                  About us
-                </h1>
-                <p
-                  class="u-align-justify u-custom-font u-font-montserrat u-text u-text-default u-text-2"
-                >
-                  We are a platform built for creative freelancers and clients
-                  to connect, collaborate, and grow together. Our mission is to
-                  ensure every freelancer finds consistent opportunities while
-                  helping clients easily discover the right talent for their
-                  projects. We believe in empowering the creative community and
-                  driving Malaysia’s creative industry forward.
-                </p>
-                <a
-                  href="About.html"
-                  data-page-id="54945205"
-                  class="u-align-left u-border-2 u-border-active-white u-border-hover-white u-border-white u-btn u-button-style u-hover-white u-palette-1-base u-text-active-palette-1-base u-text-body-alt-color u-text-hover-palette-1-base u-btn-1"
-                  data-animation-name="customAnimationIn"
-                  data-animation-duration="1500"
-                  data-animation-delay="500"
-                  title="About"
-                  >more
-                </a>
+              <div class="u-layout">
+                <div class="u-layout-row">
+                  <div
+                    class="u-container-style u-layout-cell u-shape-rectangle u-size-60 u-layout-cell-1"
+                    data-image-width="12601"
+                    data-image-height="8185"
+                    data-animation-name="customAnimationIn"
+                    data-animation-duration="1500"
+                    data-animation-delay="500"
+                  >
+                    <div
+                      class="u-container-layout u-valign-top u-container-layout-2"
+                    >
+                      <h1
+                        class="u-align-left u-custom-font u-font-roboto u-text u-text-default u-text-1"
+                      >
+                        About us
+                      </h1>
+                      <p class="u-align-justify u-text u-text-default u-text-2">
+                        We are a platform built for creative freelancers and
+                        clients to connect, collaborate, and grow together. Our
+                        mission is to ensure every freelancer finds consistent
+                        opportunities while helping clients easily discover the
+                        right talent for their projects. We believe in
+                        empowering the creative community and driving Malaysia’s
+                        creative industry forward.
+                      </p>
+                      <a
+                        href="About.html"
+                        data-page-id="54945205"
+                        class="u-align-left u-border-2 u-border-active-white u-border-hover-white u-border-white u-btn u-button-style u-hover-white u-palette-1-base u-text-active-palette-1-base u-text-body-alt-color u-text-hover-palette-1-base u-btn-1"
+                        data-animation-name="customAnimationIn"
+                        data-animation-duration="1500"
+                        data-animation-delay="500"
+                        title="About"
+                        >more
+                      </a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <img
-        class="custom-expanded u-flip-horizontal u-image u-image-default u-image-1"
-        src="images/AppIconMockup.png"
-        alt=""
-        data-image-width="1368"
-        data-image-height="1058"
-      />
     </section>
-    <section class="u-clearfix u-gradient u-image u-section-3" id="sec-0a87">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <div
-          class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1"
-        >
-          <div class="u-gutter-0 u-layout">
-            <div class="u-layout-col">
-              <div class="u-size-30">
-                <div class="u-layout-row">
-                  <div
-                    class="u-container-style u-layout-cell u-size-40 u-layout-cell-1"
-                  >
-                    <div class="u-container-layout u-container-layout-1">
-                      <div
-                        class="custom-expanded u-container-align-left u-container-style u-group u-radius-50 u-shape-round u-group-1"
-                        data-animation-name="customAnimationIn"
-                        data-animation-duration="2000"
-                      >
-                        <div class="u-container-layout u-container-layout-2">
-                          <h2
-                            class="u-align-left u-custom-font u-font-montserrat u-text u-text-default u-text-white u-text-1"
-                          >
-                            <b>Shaping the Future of Creativity</b>
-                          </h2>
-                          <p
-                            class="u-align-left u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-default u-text-2"
-                          >
-                            our vision and mission&nbsp;
-                          </p>
-                        </div>
-                      </div>
-                      <div
-                        class="custom-expanded u-container-align-left u-container-style u-group u-radius-50 u-shape-round u-white u-group-2"
-                        data-animation-name="customAnimationIn"
-                        data-animation-duration="2000"
-                      >
-                        <div
-                          class="u-container-layout u-valign-bottom-xs u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-container-layout-3"
-                        >
-                          <span
-                            class="u-align-left u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-1"
-                            ><img src="images/2661002-63df7512.png" alt=""
-                          /></span>
-                          <h5
-                            class="u-align-left u-text u-text-default u-text-3"
-                          >
-                            vision
-                          </h5>
-                          <p
-                            class="u-align-left u-text u-text-default u-text-4"
-                          >
-                            To connect every creative freelancer in Malaysia
-                            with consistent job opportunities while providing
-                            clients with a seamless platform to find the right
-                            talent easily.
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div
-                    class="u-container-align-center u-container-style u-layout-cell u-size-20 u-layout-cell-2"
-                  >
-                    <div
-                      class="u-container-layout u-valign-middle u-container-layout-4"
-                    ></div>
-                  </div>
-                </div>
-              </div>
-              <div class="u-size-30">
-                <div class="u-layout-row">
-                  <div
-                    class="u-container-style u-layout-cell u-size-60 u-layout-cell-3"
-                  >
-                    <div class="u-container-layout u-container-layout-5">
-                      <div
-                        class="u-container-align-left u-container-style u-expanded-width u-group u-radius-50 u-shape-round u-white u-group-3"
-                        data-animation-name="customAnimationIn"
-                        data-animation-duration="2000"
-                      >
-                        <div
-                          class="u-container-layout u-valign-middle u-container-layout-6"
-                        >
-                          <span
-                            class="u-align-left u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-2"
-                            ><img src="images/3234841-fa75f5a4.png" alt=""
-                          /></span>
-                          <h5
-                            class="u-align-left u-text u-text-default u-text-5"
-                          >
-                            Mission
-                          </h5>
-                          <p
-                            class="u-align-left u-text u-text-default u-text-6"
-                          >
-                            To create Malaysia’s largest creative ecosystem
-                            where freelancers grow, clients succeed, and
-                            creativity flourishes without limits.
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+    <section class="u-clearfix u-gradient u-image u-section-3" id="sec-117a">
+      <div
+        class="custom-expanded u-container-style u-group u-radius-50 u-shape-round u-group-1"
+        data-animation-name="customAnimationIn"
+        data-animation-duration="2000"
+      >
+        <div class="u-container-layout u-container-layout-1">
+          <h2
+            class="u-align-left u-custom-font u-font-montserrat u-text u-text-white u-text-1"
+          >
+            <b>Shaping the Future of Creativity</b>
+          </h2>
+          <p
+            class="u-align-left u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2"
+          >
+            our vision and mission&nbsp;
+          </p>
+        </div>
+      </div>
+      <div
+        class="custom-expanded u-container-style u-group u-radius u-shape-round u-white u-group-2"
+        data-animation-name="customAnimationIn"
+        data-animation-duration="2000"
+      >
+        <div class="u-container-layout u-container-layout-2">
+          <span
+            class="u-align-left u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-1"
+            ><img src="images/2661002-63df7512.png" alt=""
+          /></span>
+          <h5 class="u-align-left u-text u-text-default u-text-3">Vision</h5>
+          <p class="u-align-left u-text u-text-4">
+            To connect every creative freelancer in Malaysia with consistent job
+            opportunities while providing clients with a seamless platform to
+            find the right talent easily.
+          </p>
+        </div>
+      </div>
+      <div
+        class="custom-expanded u-container-style u-group u-radius-50 u-shape-round u-white u-group-3"
+        data-animation-name="customAnimationIn"
+        data-animation-duration="2000"
+      >
+        <div class="u-container-layout u-container-layout-3">
+          <span
+            class="u-align-left u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-2"
+            ><img src="images/3234841-fa75f5a4.png" alt=""
+          /></span>
+          <h5 class="u-align-left u-text u-text-default u-text-5">Mission</h5>
+          <p class="u-align-left u-text u-text-6">
+            To create Malaysia’s largest creative ecosystem where freelancers
+            grow, clients succeed, and creativity flourishes without limits.
+          </p>
         </div>
       </div>
     </section>
@@ -438,7 +389,7 @@
                   data-animation-event="scroll"
                   data-animation-duration="3000"
                 >
-                  10+
+                  2
                 </h3>
                 <h6 class="u-align-center u-text u-text-default u-text-2">
                   Years
@@ -460,7 +411,7 @@
                   data-animation-event="scroll"
                   data-animation-duration="3000"
                 >
-                  99%
+                  50%
                 </h3>
                 <h6 class="u-align-center u-text u-text-default u-text-4">
                   Active User
@@ -482,7 +433,7 @@
                   data-animation-event="scroll"
                   data-animation-duration="3000"
                 >
-                  100k
+                  20k
                 </h3>
                 <h6 class="u-align-center u-text u-text-default u-text-6">
                   Trusted Feedback
@@ -504,7 +455,7 @@
                   data-animation-event="scroll"
                   data-animation-duration="3000"
                 >
-                  1m
+                  35K
                 </h3>
                 <h6 class="u-align-center u-text u-text-default u-text-8">
                   income made&nbsp;
@@ -514,21 +465,19 @@
           </div>
         </div>
         <div
-          class="u-container-align-left u-container-style u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-group u-shape-rectangle u-group-1"
+          class="u-container-style u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-group u-shape-rectangle u-group-1"
           data-animation-name="customAnimationIn"
           data-animation-duration="1500"
           data-animation-delay="500"
         >
-          <div
-            class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-valign-top-lg u-valign-top-xl u-container-layout-5"
-          >
+          <div class="u-container-layout u-container-layout-5">
             <h3
-              class="u-align-left u-custom-font u-font-montserrat u-text u-text-default u-text-9"
+              class="u-align-left u-custom-font u-font-montserrat u-text u-text-9"
             >
               Our User
             </h3>
             <p
-              class="u-align-justify u-custom-font u-font-montserrat u-text u-text-default u-text-10"
+              class="u-align-justify u-custom-font u-font-montserrat u-text u-text-10"
             >
               fo<b>
                 <span style="font-weight: 400"
@@ -562,12 +511,12 @@
         class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1"
       >
         <div
-          class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1"
+          class="data-layout-selected u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1"
         >
           <div class="u-layout">
             <div class="u-layout-row">
               <div
-                class="u-container-style u-layout-cell u-size-30 u-layout-cell-1"
+                class="u-container-style u-layout-cell u-size-24 u-layout-cell-1"
               >
                 <div
                   class="u-container-layout u-valign-top-sm u-valign-top-xs u-container-layout-1"
@@ -585,7 +534,7 @@
                 </div>
               </div>
               <div
-                class="u-container-style u-layout-cell u-size-30 u-layout-cell-2"
+                class="u-container-style u-layout-cell u-size-36 u-layout-cell-2"
               >
                 <div
                   class="u-container-layout u-valign-bottom u-container-layout-2"
@@ -801,11 +750,6 @@
             ></span>
           </a>
         </div>
-        <p
-          class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1"
-        >
-          No 4 Lorong Kota Raja 1c 41000 Klang Selan​gor
-        </p>
       </div>
     </footer>
     <section class="u-backlink u-clearfix u-grey-80">
