--- a/appoinment.html
+++ b/appoinment.html
@@ -18,26 +18,37 @@
     </form>
 
     <script>
-        document.getElementById("bookingForm").addEventListener("submit", function(event) {
+        async function submitAppointment(event) {
             event.preventDefault();
-            
+
             const formData = {
-                name: document.getElementById("name").value,
-                phone: document.getElementById("phone").value,
-                date: document.getElementById("date").value,
-                time: document.getElementById("time").value,
-                people: document.getElementById("people").value,
-                payment: document.getElementById("payment").value
+                name: document.querySelector("#name").value,
+                phone: document.querySelector("#phone").value,
+                date: document.querySelector("#date").value,
+                time: document.querySelector("#time").value,
+                people: document.querySelector("#people").value,
+                payment: document.querySelector("#payment").value
             };
 
-            fetch("https://script.google.com/macros/s/AKfycbyTcNGguiIYxutu_L-eXiRgBnmi_1TiPv0kb-RoTOCXK6XkEkNWH2GbjiRIheOQMBJm6g/exec", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(formData)
-            })
-            .then(response => response.json())
-            .then(data => alert("Appointment booked! Your ID: " + data.id));
-        });
+            try {
+                const response = await fetch("https://script.google.com/macros/s/AKfycbyTcNGguiIYxutu_L-eXiRgBnmi_1TiPv0kb-RoTOCXK6XkEkNWH2GbjiRIheOQMBJm6g/exec", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify(formData)
+                });
+
+                const data = await response.json();
+                alert("Success! Appointment ID: " + data.id);
+            } catch (error) {
+                console.error("Error:", error);
+                alert("Failed to submit. Please try again.");
+            }
+        }
+
+        // Attach event listener to form submit
+        document.getElementById("bookingForm").addEventListener("submit", submitAppointment);
     </script>
 </body>
 </html>
