--- a/appoinment.html
+++ b/appoinment.html
@@ -1,65 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Appointment Booking</title>
-  </head>
-  <body>
-    <h2>Book an Appointment</h2>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+</head>
+<body class="container mt-5">
+
+    <h2 class="text-center">Book an Appointment</h2>
     <form id="bookingForm">
-      <input type="text" id="name" placeholder="Your Name" required />
-      <input type="text" id="phone" placeholder="Your Phone Number" required />
-      <input type="date" id="date" required />
-      <input type="time" id="time" required />
-      <input
-        type="number"
-        id="people"
-        placeholder="Number of People"
-        required
-      />
-      <input type="number" id="payment" placeholder="Payment Amount" required />
-      <button type="submit">Submit</button>
+        <div class="mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input type="text" class="form-control" id="name" required>
+        </div>
+        <div class="mb-3">
+            <label for="phone" class="form-label">Phone</label>
+            <input type="text" class="form-control" id="phone" required>
+        </div>
+        <div class="mb-3">
+            <label for="date" class="form-label">Date</label>
+            <input type="date" class="form-control" id="date" required>
+        </div>
+        <div class="mb-3">
+            <label for="time" class="form-label">Time</label>
+            <select class="form-control" id="time" required></select>
+        </div>
+        <div class="mb-3">
+            <label for="people" class="form-label">Number of People</label>
+            <input type="number" class="form-control" id="people" required>
+        </div>
+        <div class="mb-3">
+            <label for="payment" class="form-label">Payment Method</label>
+            <select class="form-control" id="payment">
+                <option value="Cash">Cash</option>
+                <option value="Card">Card</option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Book Now</button>
     </form>
 
     <script>
-      async function submitAppointment(event) {
-        event.preventDefault();
+        document.addEventListener("DOMContentLoaded", async function () {
+            const timeDropdown = document.getElementById("time");
 
-        const formData = {
-          name: document.querySelector("#name").value,
-          phone: document.querySelector("#phone").value,
-          date: document.querySelector("#date").value,
-          time: document.querySelector("#time").value,
-          people: document.querySelector("#people").value,
-          payment: document.querySelector("#payment").value,
-        };
+            // ✅ Fetch available slots from Google Apps Script
+            async function loadAvailableSlots() {
+                let response = await fetch("https://script.google.com/macros/s/YOUR_DEPLOYED_URL/exec");
+                let availableSlots = await response.json();
 
-        try {
-          const response = await fetch(
-            "https://script.google.com/macros/s/AKfycbxn8I3fwFmL7mD_bzkrzPPDnFGJ3hor8NjzsDM3vLM2ixFYFX--9t-ek9f5U5P-atNMWQ/exec",
-            {
-              method: "POST",
-              headers: {
-                "Content-Type": "text/plain;charset=utf-8", // Google suggests text/plain for Apps Script
-              },
-              body: JSON.stringify(formData),
+                timeDropdown.innerHTML = "";
+                availableSlots.forEach(slot => {
+                    let option = document.createElement("option");
+                    option.value = slot.time;
+                    option.textContent = `${slot.date} - ${slot.time}`;
+                    timeDropdown.appendChild(option);
+                });
             }
-          );
 
-          const data = await response.text(); // Get raw text response
-          console.log("Success:", data);
-          alert("Success! " + data);
-        } catch (error) {
-          console.error("Error:", error);
-          alert("Failed to submit. Please try again.");
-        }
-      }
+            loadAvailableSlots();
 
-      // Attach event listener to form submit
-      document
-        .getElementById("bookingForm")
-        .addEventListener("submit", submitAppointment);
+            document.getElementById("bookingForm").addEventListener("submit", async function (event) {
+                event.preventDefault();
+
+                const formData = {
+                    name: document.getElementById("name").value,
+                    phone: document.getElementById("phone").value,
+                    date: document.getElementById("date").value,
+                    time: document.getElementById("time").value,
+                    people: document.getElementById("people").value,
+                    payment: document.getElementById("payment").value
+                };
+
+                let response = await fetch("https://script.google.com/macros/s/AKfycbxn8I3fwFmL7mD_bzkrzPPDnFGJ3hor8NjzsDM3vLM2ixFYFX--9t-ek9f5U5P-atNMWQ/exec", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(formData)
+                });
+
+                let data = await response.json();
+                alert(data.status === "success" ? `Success! ID: ${data.id}` : `Error: ${data.message}`);
+            });
+        });
     </script>
-  </body>
+
+</body>
 </html>
