--- a/appoinment.html
+++ b/appoinment.html
@@ -6,7 +6,7 @@
     <title>Appointment Booking</title>
 </head>
 <body>
-    <h2>Book an Appointment</h2>
+    <h2>Book an Appointment 4</h2>
     <form id="bookingForm">
         <input type="text" id="name" placeholder="Your Name" required>
         <input type="text" id="phone" placeholder="Your Phone Number" required>
@@ -31,7 +31,7 @@
             };
     
             try {
-                const response = await fetch("https://script.google.com/macros/s/AKfycbyxQ3RVkU-zYCdGw2TQQi_2rn_sWM_FmOwyKWuiOTA5qoXSzfwLc8IBRi3dkPpz7nCHxQ/exec", {
+                const response = await fetch("https://script.google.com/macros/s/AKfycbwhdZ44lSax4qBS64ZKgPd635gBhR5mSKQ-AvUd87bVvFK_qiWnc53S4BCgNpRexlERuQ/exec", {
                     method: "POST",
                     headers: {
                         "Content-Type": "text/plain" // ✅ Fix CORS issue
