--- a/appoinment.html
+++ b/appoinment.html
@@ -70,13 +70,13 @@
 
           const text = await response.text(); // ✅ Read response as text
           const data = JSON.parse(text); // ✅ Manually parse JSON
-
-          if (result.status === "success" && result.appointmentId) {
-            alert(`Success! Appointment ID: ${result.appointmentId}`);
-          } else if (result.status === "duplicate") {
+          console.log(data);
+          if (data.status === "success" && data.appointmentId) {
+            alert(`Success! Appointment ID: ${data.appointmentId}`);
+          } else if (data.status === "duplicate") {
             alert("Error: This appointment already exists.");
           } else {
-            alert("Error: " + (result.message || "Unknown error occurred."));
+            alert("Error: " + (data.message || "Unknown error occurred."));
           }
         } catch (error) {
           console.error("Error:", error);
