--- a/appoinment.html
+++ b/appoinment.html
@@ -2,25 +2,72 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Appointment Booking</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Book an Appointment</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <h2>Book an Appointment 4</h2>
-    <form id="bookingForm">
-      <input type="text" id="name" placeholder="Your Name" required />
-      <input type="text" id="phone" placeholder="Your Phone Number" required />
-      <input type="date" id="date" required />
-      <input type="time" id="time" required />
-      <input
-        type="number"
-        id="people"
-        placeholder="Number of People"
-        required
-      />
-      <input type="number" id="payment" placeholder="Payment Amount" required />
-      <button type="submit">Submit</button>
-    </form>
+  <body class="bg-light">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-4 mt-5">
+          <div class="card shadow p-4">
+            <h2 class="text-center mb-4">Book an Appointment</h2>
+            <form id="bookingForm">
+              <div class="mb-3">
+                <input
+                  type="text"
+                  id="name"
+                  class="form-control"
+                  placeholder="Naimah Nur"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <input
+                  type="text"
+                  id="phone"
+                  class="form-control"
+                  placeholder="01123053082"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <input type="date" id="date" class="form-control" required />
+              </div>
+              <div class="mb-3">
+                <input type="time" id="time" class="form-control" required />
+              </div>
+              <div class="mb-3">
+                <input
+                  type="number"
+                  id="people"
+                  class="form-control"
+                  placeholder="Number of People"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <input
+                  type="number"
+                  id="payment"
+                  class="form-control"
+                  placeholder="Payment Amount"
+                  required
+                />
+              </div>
+              <button type="submit" class="btn btn-primary w-100">
+                Submit
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       async function submitAppointment(event) {
         event.preventDefault();
