--- a/appoinment.html
+++ b/appoinment.html
@@ -105,7 +105,7 @@
 
         try {
           const response = await fetch(
-            "https://script.google.com/macros/s/AKfycbzXdHw8ZZYajOOSfSkc2pFGNFEt9yDUdEA5fW7jG6_moaZ935_Rij7TZARf2Yg6uMQJjg/exec",
+            "https://script.google.com/macros/s/AKfycbwXVOV3mNmsEytRQQ1P4TY9JlCAFY2RaMUypcQAqKvoRxg3qMiqi63ZkJRKBQJOvji7KQ/exec",
             {
               method: "POST",
               headers: {
@@ -135,6 +135,22 @@
       document
         .getElementById("bookingForm")
         .addEventListener("submit", submitAppointment);
+
+      async function fetchAppointments() {
+        try {
+          const response = await fetch("https://script.google.com/macros/s/AKfycbwXVOV3mNmsEytRQQ1P4TY9JlCAFY2RaMUypcQAqKvoRxg3qMiqi63ZkJRKBQJOvji7KQ/exec");
+          const data = await response.json();
+
+          console.log(data);
+          if (data.status === "success") {
+            displayAppointments(data.data);
+          } else {
+            console.error("Error fetching appointments:", data.message);
+          }
+        } catch (error) {
+          console.error("Fetch error:", error);
+        }
+      }
     </script>
   </body>
 </html>
