--- a/appoinment.html
+++ b/appoinment.html
@@ -14,7 +14,7 @@
       <div class="row justify-content-center">
         <div class="col-md-6 col-lg-4 mt-5">
           <div class="card shadow p-4">
-            <h2 class="text-center mb-4">Book an Appointment</h2>
+            <h2 class="text-center mb-4">Photoshot Raya DayangYunk</h2>
             <form id="bookingForm">
               <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
